# workshop01-jdd

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml
app/: main.py
app/pipeline/: extract.py  load.py  transform.py
data/input/: controle-diario-maritimo-impo-2015.xlsx  controle-diario-maritimo-impo-2016.xlsx  controle-diario-maritimo-impo-2017.xlsx  controle-diario-maritimo-impo-2018.xlsx  controle-diario-maritimo-impo-2019.xlsx  controle-diario-maritimo-impo-2020.xlsx  controle-diario-maritimo-impo-2024.xlsx
docs/: index.md
tests/: test_pipeline.py
